--- a/.github/workflows/mirror-bot.yml
+++ b/.github/workflows/mirror-bot.yml
@@ -3,7 +3,7 @@ name: setting up environment
 on: [push]
     
 env:
- username: ElytrA8
+ username: IamArjun078
 jobs:
   build:
     runs-on: ubuntu-18.04
